--- a/jogo.html
+++ b/jogo.html
@@ -15,7 +15,7 @@
 
     <script type="text/javascript" src="assets/js/cookies.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/rangeSliders.js"></script>
+ 
     <script type="text/javascript" src="assets/js/login.js"></script>
     <script type="text/javascript" src="assets/js/jogo.js"></script>
     <title>Jogo</title>
@@ -71,14 +71,14 @@
 
         <div class="SpaceAround" style="border-radius: 25px 25px 0 0;">
             <div class="RangeAndLabel">
-                <div class="value" id="lbl1">8</div>
+                <div class="value" id="lbl1">9</div>
                 <div class="RangeSlider">
                     <input id="slider1" type="range" min="1" max="30" step="1" value="8">
                 </div>
             </div>
 
             <div class="RangeAndLabel">
-                <div class="value" id="lbl2">8</div>
+                <div class="value" id="lbl2">9</div>
                 <div class="RangeSlider">
                     <input id="slider2" type="range" min="1" max="24" step="1" value="8">
 
@@ -112,7 +112,7 @@
         <br> <br>
         <div class="gameButtons" style="width: 20%;">
             <div class="button">
-                <button id="multicolor5" class="button test" onclick="window.location.href='SPlayer.html'"> Single
+                <button id="multicolor5" class="button test" onclick="openSinglePlayer()"> Single
                     Player</button>
             </div>
             <div class="button">
