--- a/SPlayer.html
+++ b/SPlayer.html
@@ -74,7 +74,10 @@ Grupo 46    PL21
                 <p> <span id="timer">0</span> s</p>
                 <h2> Minas </h2>
                 <p> ## </p>
+                <button id="btnRestart" onclick="resetBoard()">Restart</button>
             </div>
+
+
         </div>
     </div>
     <br>
